working processor with some debug sysouts