@@ -1,6 +1,7 @@
 package de.tud.cs.st.vespucci.processor.ensembletosourcemap;
 
 import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
 
 import org.eclipse.core.resources.IFile;
@@ -17,7 +18,6 @@ import sae.operators.BagProjection;
 import sae.operators.BagUnion;
 import sae.operators.Projection;
 import sae.operators.Union;
-import scala.util.parsing.combinator.Parsers;
 import scala.util.parsing.combinator.Parsers.Failure;
 import scala.util.parsing.combinator.Parsers.ParseResult;
 import unisson.query.UnissonQuery;
@@ -60,7 +60,7 @@ public class EnsembleElementModelProcessor implements IModelProcessor {
 			try {
 				query = getQuery(ensemble);
 			} catch (UnissonParserException e) {
-				reportParserError(diagramFile, e.getMessage());
+				reportParserError(diagramFile, ensemble, e.getMessage());
 				continue;
 			}
 
@@ -78,7 +78,15 @@ public class EnsembleElementModelProcessor implements IModelProcessor {
 			return new EmptyEnsembleElementList();
 		}
 		if (mappings.size() == 1) {
-			return new EnsembleElementListView(mappings.get(0));
+			
+			EnsembleElementListView view = new EnsembleElementListView(mappings.get(0));
+			
+			for (Iterator<IPair<IEnsemble, ICodeElement>> iterator = view.iterator(); iterator.hasNext();) {
+				IPair<IEnsemble, ICodeElement> next = (IPair<IEnsemble, ICodeElement>) iterator.next();
+				System.out.println(next.getFirst().getName() + " :: " + next.getSecond());
+			}
+
+			return view;
 		}
 		// we have two or more mappings
 
@@ -89,16 +97,29 @@ public class EnsembleElementModelProcessor implements IModelProcessor {
 			union = createUnion(mappings.get(i), union);
 		}
 
-		return new EnsembleElementListView(union);
+		EnsembleElementListView view = new EnsembleElementListView(union);
+		
+		for (Iterator<IPair<IEnsemble, ICodeElement>> iterator = view.iterator(); iterator.hasNext();) {
+			IPair<IEnsemble, ICodeElement> next = (IPair<IEnsemble, ICodeElement>) iterator.next();
+			System.out.println(next.getFirst().getName() + " :: " + next.getSecond());
+		}
+		return view;
 	}
 
-	private void reportParserError(IFile diagramFile, String msg) {
+	/**
+	 * 
+	 * @param diagramFile
+	 * @param msg
+	 */
+	private void reportParserError(IFile diagramFile, IEnsemble ensemble, String msg) {
 		try {
 			IMarker marker = diagramFile
 					.createMarker("org.eclipse.core.resources.problemmarker");
 			marker.setAttribute(IMarker.MESSAGE, msg);
 			marker.setAttribute(IMarker.SEVERITY, IMarker.SEVERITY_ERROR);
 			marker.setAttribute(IMarker.TRANSIENT, true);
+			marker.setAttribute(IMarker.LOCATION, ensemble.getName());
+			marker.setAttribute(IMarker.PROBLEM, "Query");
 		} catch (CoreException e) {
 			final IStatus is = new Status(IStatus.ERROR, Activator.PLUGIN_ID,
 					e.getMessage(), e);
@@ -130,27 +151,40 @@ public class EnsembleElementModelProcessor implements IModelProcessor {
 
 	}
 
+	/**
+	 * 
+	 * @param ensemble
+	 * @return
+	 * @throws UnissonParserException
+	 */
 	private UnissonQuery getQuery(IEnsemble ensemble)
 			throws UnissonParserException {
 		String query = ensemble.getQuery();
 		QueryParser parser = new QueryParser();
 		ParseResult<UnissonQuery> result = parser.parse(query);
-
-		if (result.$outer instanceof Parsers.Failure) {
-			Failure failure = (Failure) result.$outer;
+		
+		
+		if (result.getClass().isAssignableFrom(Failure.class)) {
+			Failure failure = Failure.class.cast(result);
+			
 			// if printed in this way the second line will have a nice arrow
 			// marker at the position of the error
 			// System.out.println(failure.msg());
 			// System.out.println(failure.next().pos().longString());
 
-			throw new UnissonParserException(failure.msg().substring(0,
-					failure.next().pos().column()));
+			throw new UnissonParserException(failure.msg());
 
 		}
 		UnissonQuery unissonQuery = result.get();
 		return unissonQuery;
 	}
 
+	/**
+	 * 
+	 * @param left
+	 * @param right
+	 * @return
+	 */
 	Union<IPair<IEnsemble, ICodeElement>, IPair<IEnsemble, ICodeElement>, IPair<IEnsemble, ICodeElement>> createUnion(
 			LazyView<IPair<IEnsemble, ICodeElement>> left,
 			LazyView<IPair<IEnsemble, ICodeElement>> right) {
